fixing display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,8 @@ body {
   .game {
     display: flex;
     flex-direction: column;
-    margin: 100px 20px;
+    margin: 100px 80px;
+    width: 300px;
   }
   .game-info ol {
     display: grid;
@@ -131,6 +132,7 @@ body {
   .manage-game {
     width: 120px;
     height: 35px;
+    
   }
   .board {
     margin-right: 10px;
